--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -13,7 +13,24 @@
 				</ul>
 			</div>
 			<div class="footer__bottom">
-
+				<div class="footer__bottom-wrap">
+					<div class="footer__name footer__text">винный бутик LE CORTE</div>
+					<div class="footer__line"></div>
+					<div class="footer__phone footer__text">8 (812) 123-45-67</div>
+					<div class="footer__line"></div>
+					<div class="footer__social-network social-network">
+						<ul class="social-network__list">
+							<li class="social-network__item"><a href="#" class="social-network__link"><img
+										src="img/footer/01.svg" alt="" class="social-network__img"></a></li>
+							<li class="social-network__item"><a href="#" class="social-network__link"><img
+										src="img/footer/02.svg" alt="" class="social-network__img"></a></li>
+							<li class="social-network__item"><a href="#" class="social-network__link"><img
+										src="img/footer/03.svg" alt="" class="social-network__img"></a></li>
+						</ul>
+					</div>
+					<div class="footer__line"></div>
+					<div class="footer__label footer__text">le-corte.ru</div>
+				</div>
 			</div>
 		</div>
 	</div>
