--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,79 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__harvest harvest">
+				<div class="harvest__container _container">
+					<div class="harvest__wrap">
+						<div class="harvest__body">
+							<div class="harvest__text-block">
+								<div class="harvest__subtitle">Новинки коллекций</div>
+								<h2 class="harvest__title">Март 1980 Урожай Марселя</h2>
+								<p class="harvest__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non
+									sit sed fermentum. Felis adipiscing morbi sodales ac. </p>
+								<div class="harvest__table table">
+									<div class="table__row">
+										<div class="table__date">1980</div>
+										<div class="table__body">
+											<h3 class="table__title">Colli Euganei Bianco Ca' Lustra 1980</h3>
+											<p class="table__text">Красочная бутылка вина из Марселя</p>
+										</div>
+									</div>
+									<div class="table__row">
+										<div class="table__date">1980</div>
+										<div class="table__body">
+											<h3 class="table__title">Colli Euganei Bianco Ca' Lustra 1980</h3>
+											<p class="table__text">Красочная бутылка вина из Марселя</p>
+										</div>
+									</div>
+									<div class="table__row">
+										<div class="table__date">1980</div>
+										<div class="table__body">
+											<h3 class="table__title">Colli Euganei Bianco Ca' Lustra 1980</h3>
+											<p class="table__text">Красочная бутылка вина из Марселя</p>
+										</div>
+									</div>
+								</div>
+								<p class="harvest__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non
+									sit sed fermentum. Felis adipiscing morbi sodales ac. </p>
+								<a href="#" class="harvest__button">узнать подробнее</a>
+							</div>
+							<div class="harvest__image-block image">
+								<img src="img/harvest/01.jpg" alt="" class="image__big">
+								<img src="img/harvest/02.jpg" alt="" class="image__little">
+								<img src="img/harvest/03.jpg" alt="" class="image__little">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__record record">
+				<div class="record__container _container">
+					<div class="record__wrap">
+						<div class="record__body">
+							<img src="img/record/01.jpg" alt="" class="record__img record__img_left">
+							<img src="img/record/02.jpg" alt="" class="record__img record__img_right">
+							<h2 class="record__title">Запись на дегустацию</h2>
+							<p class="record__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
+								enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed
+								fermentum.</p>
+							<form action="#" method="get" class="record__form form">
+								<div class="form__wrap">
+									<input type="text" name="username" placeholder="Имя" id="">
+									<input type="tel" name="telephone" placeholder="Телефон" id="">
+								</div>
+								<input list="%идентификатор%" value="Бутик на Невском 103" class="form__adres">
+								<datalist id="%идентификатор%">
+									<option value="Бутик на Невском 103">
+									<option value="Бутик на Ленинском 76">
+								</datalist>
+								<button class="form__button">записаться</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/footer.html', {})
 	</div>
